<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (c) 2021-present, the hapjs-platform Project Contributors
    SPDX-License-Identifier: Apache-2.0
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Runtime</string>

    <string name="exception_activity_label">Error details</string>
    <string name="exception_btn_copy">Copy</string>
    <string name="exception_btn_close">Close</string>
    <string name="inspector_unready">Wait for DevTools to connect</string>

    <!-- permissions of features -->
    <string name="permission_dialog_message"><xliff:g id="app">%1$s</xliff:g> wants to <xliff:g id="perm">%2$s</xliff:g>.</string>
    <string name="permission_dialog_allow">ALLOW</string>
    <string name="permission_dialog_block">RESTRICT</string>
    <string name="permission_desc_location">use your device\'s location</string>
    <string name="permission_desc_record_audio">record audio</string>
    <string name="permission_desc_read_phone_state">read phone status</string>
    <string name="dlg_permission_accept">Allow</string>
    <string name="dlg_permission_reject">Restrict</string>
    <string name="dlg_permission_remind">Don\'t ask again</string>

    <string name="platform_incompatible">The platform is too old to run <xliff:g id="app">%1$s</xliff:g>. Update the platform.</string>

    <string name="dlg_page_error_title">An error occurred in <xliff:g id="app">%1$s</xliff:g>.</string>
    <string name="dlg_page_error_message">View error details</string>
    <string name="dlg_btn_continue">Continue</string>
    <string name="dlg_btn_quit">Exit</string>
    <string name="toast_error_detail_copied">Copied error details successfully</string>
    <string name="toast_error_debugger_too_old">The current version of Debugger is too old. Update Debugger first.</string>
    <string name="toast_error_debug_core_not_install">Debug core isn\'t installed</string>
    <string name="notification_creating_shortcut_for">Creating shortcut for %s\u2026</string>
    <string name="resident_notification_desc">%s is running in the background.</string>

    <!-- system menu -->
    <string name="create_shortcut">Create shortcut</string>

    <!-- Hap Permission -->
    <string name="hap_permission_ringtone_desc">set system ringtone</string>
    <string name="hap_permission_step_counter_desc">get steps data</string>
    <string name="hap_permission_access_clipboard_desc">Access the clipboard</string>
    <string name="hap_permission_write_clipboard_desc">Write to the clipboard</string>

    <!--unsupported element-->
    <string name="unsupported_element_tip">Unsupported Element:<xliff:g id="app">%1$s</xliff:g></string>

    <!-- Notification Channel-->
    <string name="features_notification_channel_audio">Audio Notification</string>
    <string name="features_notification_channel_default">App Notification</string>
    <string name="platform_notification_channel_service">Service Notification</string>
    <string name="resident_notification_channel_name">Background Service Notification</string>
    <!--menubar-->
    <string name="menubar_dlg_menu">Menu</string>
    <string name="menubar_dlg_background_run">Running in the background</string>
    <string name="menubar_dlg_about">About</string>
    <string name="menubar_dlg_share">Share</string>
    <string name="menubar_dlg_create_shortcut">Add to desktop</string>
    <string name="menubar_dlg_go_home">Go home</string>
    <string name="menubar_dlg_already_added_shortcut">Added to desktop</string>
    <string name="menubar_dlg_cancel">Cancel</string>
    <string name="menubar_dlg_using_location">Locating</string>
    <string name="menubar_dlg_using_record">Recording</string>
    <string name="menubar_share_default_description">Open quick apps without downloading, click to use</string>
    <string name="menubar_tips">If there is occlusion, you can drag me away!</string>
    <string name="quick_app_open_native">Opening app "%s",confirm to open?</string>
    <string name="quick_app_open_quick_app_with_target">%1$s is about to open %2$s</string>
    <string name="quick_app_open_quick_app">You are about to leave %s and open other quick apps</string>
    <!--analyzer-->
    <string name="analyzer_unknown" translatable="false">-</string>
    <string name="analyzer_cpu" translatable="false">CPU</string>
    <string name="analyzer_mem" translatable="false">MEM</string>
    <string name="analyzer_frame_fps" translatable="false">FPS</string>
    <string name="analyzer_page_switch_time" translatable="false">PageTime</string>
    <string name="analyzer_feature_invoke" translatable="false">API</string>
    <string name="analyzer_inspector_type_vdom" translatable="false">vdom</string>
    <string name="analyzer_inspector_type_native" translatable="false">native</string>
    <string name="analyzer_log_type_js" translatable="false">JS</string>
    <string name="analyzer_log_type_native" translatable="false">NA</string>
    <string name="analyzer_log_level_verbose" translatable="false">verbose</string>
    <string name="analyzer_log_level_debug" translatable="false">debug</string>
    <string name="analyzer_log_level_info" translatable="false">info</string>
    <string name="analyzer_log_level_warning" translatable="false">warning</string>
    <string name="analyzer_log_level_error" translatable="false">error</string>
    <string name="analyzer_log_filter_hint">Filtered search</string>
    <string name="analyzer_log_filter_collapse">Hide</string>
    <plurals name="analyzer_number_warning_message">
        <item quantity="one">%1$d notification</item>
        <item quantity="other">%1$d notifications</item>
    </plurals>
    <plurals name="analyzer_number_error_message">
        <item quantity="one">%1$d error</item>
        <item quantity="other">%1$d errors</item>
    </plurals>
    <plurals name="analyzer_notice_expand_tips">
        <item quantity="one">%1$d message</item>
        <item quantity="other">%1$d messages</item>
    </plurals>
    <string name="analyzer_notice_min_warn_error_message_tips">%1$s, %2$s</string>
    <string name="analyzer_more_text_tip">More</string>
    <string name="analyzer_less_text_tip">Hide</string>
    <plurals name="analyzer_inspector_vdom_check_warning">
        <item quantity="one">[%1$s] The depth of vdom is %2$d. Don\'t go over %3$d layer.</item>
        <item quantity="other">[%1$s] The depth of vdom is %2$d. Don\'t go over %3$d layers.</item>
    </plurals>
    <plurals name="analyzer_inspector_native_check_warning">
        <item quantity="one">[%1$s] The native view level is %2$d. Don\'t go over %3$d layer.</item>
        <item quantity="other">[%1$s] The native view level is %2$d. Don\'t go over %3$d layers.</item>
    </plurals>
    <plurals name="analyzer_feature_invoke_check_warning">
        <item quantity="one">[%1$s] The features are invoked %2$d time when the page is being created. Don\'t exceed %3$d.</item>
        <item quantity="other">[%1$s] The features are invoked %2$d times when the page is being created. Don\'t exceed %3$d.</item>
    </plurals>
    <string name="analyzer_image_check_warning">[%1$s] Large picture is applied to image component. Original size: [%2$s]. Used size: [%3$s]. Source: %4$s.</string>
    <string name="analyzer_outer_view_warning">[%1$s] Too many views rendered out of the screen. Use lazy loading.</string>
    <string name="analyzer_irregular_listitem_type_warning">[%1$s] Use different list-item types with different dom.</string>
    <string name="analyzer_outer_view_warning_toast">Too many views are outside the screen (marked in blue)</string>
    <string name="analyzer_notice_copy_success">Copied regular inspection info to clipboard</string>
    <string name="analyzer_net_detail_general" translatable="false">General</string>
    <string name="analyzer_net_detail_timing" translatable="false">Timing</string>
    <string name="analyzer_net_detail_time_stalled" translatable="false">Stalled:</string>
    <string name="analyzer_net_time_download" translatable="false">Content download:</string>
    <string name="analyzer_net_time_total" translatable="false">Total:</string>
    <string name="analyzer_net_response" translatable="false">Response</string>
    <string name="analyzer_net_response_toolong_warn" translatable="false">The text is too long to display fully!</string>
    <string name="analyzer_net_preview" translatable="false">Preview</string>
    <string name="analyzer_net_preview_no" translatable="false">Nothing to preview.</string>
    <string name="analyzer_net_detail_time_start" translatable="false">Queued/Started at:</string>
    <string name="analyzer_net_list_name" translatable="false">Name</string>
    <string name="analyzer_net_list_type" translatable="false">Type</string>
    <string name="analyzer_net_list_size" translatable="false">Size</string>
    <string name="analyzer_net_list_time" translatable="false">Time</string>
    <string name="analyzer_net_list_waterfall" translatable="false">Waterfall</string>
    <string name="analyzer_net_init_fail_info">Couldn\'t initialize network. Try the following:\u0020</string>
    <string name="analyzer_network_retry_kill_process"><u>kill current process</u></string>
    <string name="analyzer_network_retry_reopen">, and start debugging again.</string>
    <string name="menubar_tips_special">Click to add <xliff:g id="app">%1$s</xliff:g> to the desktop,which is more convenient to use next time.</string>
    <string name="menubar_added_shortcut_tips">Added to desktop \"<xliff:g id="app">%1$s</xliff:g>\" </string>
    <!-- shortcutbtn-->
    <string name="shortcut_add_shortcut_mini">Add to desktop</string>
    <string name="shortcut_add_shortcut_desktop">Add to desktop</string>
    <string name="shortcut_add_shortcut_long">Add to desktop</string>
    <!--menubar 无障碍-->
    <string name="talkback_titlebar_left_menu_iv">more-button</string>
    <string name="popup_window_default_title">pop-up window</string>
    <string name="talkback_close">close-button</string>
    <string name="talkback_common_button">button</string>
</resources>
