<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2022, the hapjs-platform Project Contributors
    SPDX-License-Identifier: Apache-2.0
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_analyzer_console_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_analyzer_panel_top_bg"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/btn_analyzer_console_ctl_line"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="52dp"
            android:layout_height="5dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_analyzer_sliding_panel_line" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/analyzer_log_func_bar"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_analyzer_console_ctl_line">

        <LinearLayout
            android:id="@+id/analyzer_log_filter_container_parent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_panel_log_filter_collapse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/analyzer_log_filter_container"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:background="@drawable/analyzer_panel_log_filter_bg"
                android:orientation="horizontal"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_panel_log_filter"
                    android:layout_width="33dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:visibility="visible"
                    app:srcCompat="@drawable/selector_analyzer_log_filter" />

                <EditText
                    android:id="@+id/analyzer_log_filter_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/btn_panel_log_filter"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/analyzer_log_filter_hint"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/shape_analyzer_console_cursor"
                    android:textColor="#fff"
                    android:textColorHint="#919191"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_panel_log_filter_clear"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="7dp"
                    android:layout_toEndOf="@+id/analyzer_log_filter_edit"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    app:srcCompat="@drawable/selector_analyzer_log_filter_clear" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/analyzer_log_func_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/btn_panel_log_type_js"
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:background="@drawable/selector_analyzer_logtype_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/analyzer_log_type_js"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_panel_log_type_native"
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:background="@drawable/selector_analyzer_logtype_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/analyzer_log_type_native"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_panel_log_clear"
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                app:srcCompat="@drawable/selector_analyzer_clear_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_panel_log_lock"
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                app:srcCompat="@drawable/selector_analyzer_lock_btn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_panel_log_filter_style"
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/selector_analyzer_log_filter_style" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_panel_log_filter_collapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9.33dp"
            android:layout_marginEnd="18.67dp"
            android:text="@string/analyzer_log_filter_collapse"
            android:textColor="#fff"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/analyzer_log_filter_container_parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/analyzer_log_level_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_analyzer_panel_log_level_item_bg"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@id/analyzer_log_func_bar">

        <RadioButton
            android:id="@+id/analyzer_log_level_v"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/selector_analyzer_panel_log_level_btn_bg"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/analyzer_log_level_verbose"
            android:textColor="#fff" />

        <RadioButton
            android:id="@+id/analyzer_log_level_d"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/selector_analyzer_panel_log_level_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/analyzer_log_level_debug"
            android:textColor="#fff" />

        <RadioButton
            android:id="@+id/analyzer_log_level_i"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/selector_analyzer_panel_log_level_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/analyzer_log_level_info"
            android:textColor="#fff" />

        <RadioButton
            android:id="@+id/analyzer_log_level_w"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/selector_analyzer_panel_log_level_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/analyzer_log_level_warning"
            android:textColor="#fff" />

        <RadioButton
            android:id="@+id/analyzer_log_level_e"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@drawable/selector_analyzer_panel_log_level_btn_bg"
            android:button="@null"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/analyzer_log_level_error"
            android:textColor="#fff" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/analyzer_log_list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/analyzer_log_level_group"
        app:layout_constraintVertical_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/analyzer_log_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_analyzer_log_empty" />

        <org.hapjs.analyzer.views.EmptyRecyclerView
            android:id="@+id/analyzer_log_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:scrollbarSize="1dp"
            android:scrollbarThumbVertical="@android:color/white"
            android:scrollbars="vertical" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>