<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (c) 2021-present, the hapjs-platform Project Contributors
    SPDX-License-Identifier: Apache-2.0
-->

<!-- xmlns:fresco="http://schemas.android.com/apk/res-auto"-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/titlebar_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.hapjs.component.view.TitleLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titlebarview"
        android:layout_width="78dp"
        android:layout_height="26dp"
        android:layout_gravity="center"
        android:background="@drawable/titlebar_bg"
        android:orientation="horizontal"
        android:padding="2px">

        <LinearLayout
            android:id="@+id/left_menu_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/titlebar_bg_left_light_click_selector"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="11dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/left_menu_iv"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/menu_dot"
                        android:contentDescription="@string/talkback_titlebar_left_menu_iv"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="8dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/menubar_point_iv"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_gravity="top"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/titlebar_point_bg"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_view_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/titlebar_bg_light">

            <View
                android:id="@+id/middle_view"
                android:layout_width="2px"
                android:layout_height="19dp"
                android:layout_gravity="center_vertical"
                android:background="#14000000"></View>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_close_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/titlebar_bg_right_light_click_selector"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="11dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/right_menu_iv"
                    android:layout_width="@dimen/menubar_dialog_menu_close_image_width"
                    android:layout_height="@dimen/menubar_dialog_menu_close_image_height"
                    android:layout_gravity="center"
                    android:src="@drawable/menu_close"
                    android:contentDescription="@string/talkback_close"/>
            </LinearLayout>
        </LinearLayout>

    </org.hapjs.component.view.TitleLinearLayout>

    <ImageView
        android:id="@+id/menubar_tips_top_img"
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:src="@drawable/menubar_tips_top_arrow"
        android:visibility="gone"></ImageView>

    <LinearLayout
        android:id="@+id/menubar_tips_bottom_container"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="@drawable/menubar_tips_bg"
        android:visibility="gone">

        <TextView
            android:id="@+id/menubar_tips_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:gravity="right"
            android:maxWidth="208dp"
            android:paddingLeft="13dp"
            android:paddingRight="6dp"
            android:singleLine="true"
            android:text="@string/menubar_tips"
            android:textColor="#FFFFFFFF"
            android:textSize="14dp"></TextView>
    </LinearLayout>
</FrameLayout>